--- a/apps/shell/src/app/layout/components/shell-tabs/shell-tabs.component.html
+++ b/apps/shell/src/app/layout/components/shell-tabs/shell-tabs.component.html
@@ -27,6 +27,7 @@
 
   <!-- Tab Content (Menu Items) -->
   <div
+    #tabContent
     class="tab-content"
     role="tabpanel"
     [attr.id]="'tab-panel-' + tabsService.activeTab()"
