--- a/libs/shared/theme/src/lib/styles/global.scss
+++ b/libs/shared/theme/src/lib/styles/global.scss
@@ -61,6 +61,8 @@
   /* Layout Dimensions */
   --sidebar-width: 16rem;
   --sidebar-collapsed-width: 4rem;
+  --sidebar-padding: 1rem;
+  --sidebar-scrollbar-size: 0.375rem; /* 6px */
   --topbar-height: 4rem;
   --footer-height: 3rem;
 
